[package]
name = "pls"
description = "`pls` is a prettier and powerful `ls` for the pros."
version = "0.0.1-beta.7"

authors = ["Dhruv Bhanushali <hi@dhruvkb.dev>"]

license = "GPL-3.0-or-later"

homepage = "https://pls.cli.rs/"
repository = "https://github.com/pls-rs/pls"
documentation = "https://pls.cli.rs/"
readme = "README.md"
exclude = [".github/", "/readme_assets", "/justfile", "/.gitignore"]

keywords = ["cli", "terminal", "posix", "ls"]
categories = ["command-line-utilities"]

edition = "2021"
rust-version = "1.70.0"

[[bin]]
name = "pls"

[dependencies]
clap = { version = "4.3.11", features = ["derive", "wrap_help"] }
colored = "2.0.0"
env_logger = { version = "0.11.5", default-features = false }
figment = { version = "0.10.10", features = ["yaml", "test"] }
git2 = { version = "0.19.0", default-features = false }
home = "0.5.5"
lazy_static = "1.4.0"
log = { version = "0.4.19", features = ["release_max_level_off"] }
number_prefix = "0.4.0"
path-clean = "1.0.1"
regex = { version = "1.8.4", default-features = false, features = ["std", "perf"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_regex = "1.1.0"
terminal_size = "0.3.0"
time = { version = "0.3.22", default-features = false, features = ["std", "alloc", "local-offset", "formatting"] }
unicode-segmentation = "1.10.1"
uzers = { version = "0.12.1", default-features = false, features = ["cache"] }

[profile.release]
# Reference: https://github.com/johnthagen/min-sized-rust
codegen-units = 1
panic = "abort"
lto = true
strip = true

[package.metadata.release]
sign-commit = true
sign-tag = true
publish = false
push = false
pre-release-commit-message = "Release {{version}}"
tag-message = "Release {{crate_name}} version {{version}}"
