[package]
name = "pls"
description = "pls is a prettier and powerful ls(1) for the pros"
version = "0.0.1-beta.9"

authors = ["Dhruv Bhanushali <hi@dhruvkb.dev>"]

license = "GPL-3.0-or-later"

homepage = "https://pls.cli.rs/"
repository = "https://github.com/pls-rs/pls"
documentation = "https://pls.cli.rs/"
readme = "README.md"
exclude = [".github/", "/readme_assets", "/justfile", "/.gitignore"]

keywords = ["cli", "terminal", "posix", "ls"]
categories = ["command-line-utilities"]

edition = "2021"
rust-version = "1.80.0"

[[bin]]
name = "pls"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.57", features = ["derive", "wrap_help"] }
colored = "3.1.1"
crossterm = { version = "0.29.0", default-features = false }
env_logger = { version = "0.11.8", default-features = false }
figment = { version = "0.10.19", features = ["yaml", "test"] }
git2 = { version = "0.20.4", default-features = false }
home = "0.5.12"
libc = "0.2.180"
log = { version = "0.4.29", features = ["release_max_level_off"] }
number_prefix = "0.4.0"
path-clean = "1.0.1"
regex = { version = "1.12.3", default-features = false, features = ["std", "perf"] }
resvg = { version = "0.46.0", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_regex = "1.1.0"
shellexpand = { version = "3.1.1", default-features = false, features = ["base-0"] }
time = { version = "0.3.47", default-features = false, features = ["std", "alloc", "local-offset", "formatting"] }
unicode-segmentation = "1.12.0"
uzers = { version = "0.12.2", default-features = false, features = ["cache"] }
xterm-query = "0.5.2"

[profile.release]
# Reference: https://github.com/johnthagen/min-sized-rust
codegen-units = 1
panic = "abort"
lto = true
strip = true

[package.metadata.release]
sign-commit = true
sign-tag = true
publish = false
push = false
pre-release-commit-message = "Release {{version}}"
tag-message = "Release {{crate_name}} version {{version}}"
