[tool.poetry]
name = "pls"
description = "`pls` is a better `ls` for developers."
version = "1.9.2"

authors = ["Dhruv Bhanushali"]

license = "GPL-3.0-or-later"
readme = "README.md"

homepage = "https://dhruvkb.github.io/pls"
repository = "https://github.com/dhruvkb/pls"
documentation = "https://dhruvkb.github.io/pls"

[tool.poetry.scripts]
pls = "pls.main:main"

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^6.0"
rich = "^11.1.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.17.0"
ipython = "^8.0.1"
pytest = "^7.0.0"
pytest-lazy-fixture = "^0.6.3"

[tool.pytest.ini_options]
cache_dir = ".pytest_cache"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
