[tool.poetry]
name = "pls"
description = "`pls` is a prettier and powerful `ls` for the pros."
version = "5.3.0"

authors = ["Dhruv Bhanushali"]

license = "GPL-3.0-or-later"
readme = "README.md"

homepage = "https://dhruvkb.github.io/pls"
repository = "https://github.com/dhruvkb/pls"
documentation = "https://dhruvkb.github.io/pls"

[tool.poetry.scripts]
pls = "pls.main:main"
pls-dev = "pls.main:dev"

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^6.0"
rich = "^12.4.3"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.19.0"
ipython = "^8.3.0"
pytest = "^7.1.2"
pytest-lazy-fixture = "^0.6.3"
freezegun = "^1.2.1"
jsonschema = "^4.7.2"
requests = "^2.27.1"
pytest-cov = "^3.0.0"

[tool.pytest.ini_options]
cache_dir = ".pytest_cache"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
