[project]
name = "examples"
version = "0.0.0"
description = "Generate examples for `pls` documentation"
authors = [
	{name = "Dhruv Bhanushali", email = "dhruv_b@live.com"},
]

requires-python = "==3.12.*"
dependencies = [
	"python-decouple >=3.8, <4",
]

[tool.pdm.dev-dependencies]
dev = [
	"ipython >=8.22.1, <9",
]
