[project]
name = "examples"
version = "0.0.0"
description = "Generate examples for `pls` documentation"
authors = [{ name = "Dhruv Bhanushali", email = "dhruv_b@live.com" }]

requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = ["ipython >=9.15.0, <10"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/examples"]
